# bayesian_septic

./: .gitignore  GNUMakeFile  README.md  main.py  pyproject.toml  requirements.txt
configs/: hb_model_example.json  mhb_model_example.json  model_example.json
docs/: double_level  pooled  single_level  single_level_with_attributes
notebooks/: 00 model justification.ipynb  00_model justification.ipynb  01 hierarchical_bayesian_twovars.ipynb  01_hierarchical_bayesian.ipynb  01_hierarchical_bayesian_full.ipynb  01a_multilevel_bayesian_full.ipynb  01b_hierarchical_bayesian_full_with_attributes.ipynb  02 hierarchical_bayesian_threevars.ipynb  02_baseline_model.ipynb  03 hierarchical_bayesian_housing.ipynb  03_goodness_of_fit.ipynb  04 hierarchical_bayesian_topography.ipynb  04_inference.ipynb  04a multilevel bayesian.ipynb  04a_inference_with_attributes.ipynb  05 baseline comparison.ipynb  06 goodness_of_fit.ipynb  models.py  params.py  scripts.py  utils.py
src/: bayes_models.py  models.py  params.py  test_scripts.py  utils.py
