[tool.poetry]
name = "bayesian-septic"
version = "0.1.0"
description = ""
authors = ["juannat7"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
arviz = "^0.14.0"
censusdata = "^1.15.post1"
geopandas = "^0.12.1"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
pandas = "^1.5.2"
pymc = "^4.4.0"
rioxarray = "^0.13.1"
scikit-learn = "^1.1.3"
scipy = "^1.9.3"
seaborn = "^0.12.1"
theano = "^1.0.5"
theano-pymc = "^1.1.2"
tqdm = "^4.64.1"
xarray = "^2022.11.0"
statsmodels = "0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
